force-app/main/default/objects/FIN_TaxInformation__c/FIN_TaxInformation__c.object-meta.xml
<CustomObject>
    <label>Tax Information</label>
    <nameField>
        <displayFormat>LN-{0000000000}</displayFormat>
        <label>Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>