force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Taxes Information (Account)</relationshipLabel>
    <relationshipName>Taxes_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>