force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_AccountType__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountType__c</fullName>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>