force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_BankingInfo__c.field-meta.xml
<CustomField>
    <fullName>FIN_BankingInfo__c</fullName>
    <label>Banking Info</label>
    <length>250</length>
    <type>Text</type>
</CustomField>