force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Tax Information</relationshipLabel>
    <relationshipName>Tax_Information</relationshipName>
    <type>Lookup</type>
</CustomField>