force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_DBA__c.field-meta.xml
<CustomField>
    <fullName>FIN_DBA__c</fullName>
    <label>DBA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>