force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_Method__c.field-meta.xml
<CustomField>
    <fullName>FIN_Method__c</fullName>
    <label>Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>