force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_Note_Purpose__c.field-meta.xml
<CustomField>
    <fullName>FIN_Note_Purpose__c</fullName>
    <label>Note/Purpose</label>
    <length>250</length>
    <type>Text</type>
</CustomField>