force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_PayeeInfo__c.field-meta.xml
<CustomField>
    <fullName>FIN_PayeeInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Info</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Taxes Information</relationshipLabel>
    <relationshipName>Taxes_Information</relationshipName>
    <type>Lookup</type>
</CustomField>