force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_Routing__c.field-meta.xml
<CustomField>
    <fullName>FIN_Routing__c</fullName>
    <label>Routing</label>
    <length>250</length>
    <type>Text</type>
</CustomField>