force-app/main/default/objects/FIN_TaxInformation__c/fields/FIN_SupplierID__c.field-meta.xml
<CustomField>
    <fullName>FIN_SupplierID__c</fullName>
    <externalId>true</externalId>
    <label>Supplier ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>